# python-anytemplate

./: .travis.yml  ChangeLog  LICENSE  MANIFEST.in  README.rst  azure-pipelines.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
anytemplate/: __init__.py  api.py  cli.py  compat.py  engine.py  globals.py  utils.py
anytemplate/engines/: base.py  cheetah.py  jinja2.py  mako.py  pystache.py  string.py  stringTemplate.py  strtemplate.py  tenjin.py
anytemplate/engines/tests/: base.py  cheetah.py  jinja2.py  mako.py  pystache.py  string.py  stringTemplate.py  strtemplate.py  tenjin.py
anytemplate/tests/: api.py  cli.py  common.py  compat.py  engine.py  globals.py  import_errors.py  utils.py
examples/: ctx.yml  jinja2-incl.j2  jinja2.j2
pkg/: entry_points.txt  nose.cfg  package.spec.in  requirements-py-2.6.txt  requirements-py-2.7.txt  requirements.txt  runtest.sh  test_requirements-py-2.6.txt  test_requirements-py-2.7.txt  test_requirements.txt
src/anytemplate/: __init__.py  api.py  cli.py  compat.py  engine.py  globals.py  utils.py
src/anytemplate/engines/: base.py  cheetah.py  jinja2.py  mako.py  pystache.py  strtemplate.py  tenjin.py
tests/: api.py  cli.py  common.py  compat.py  engine.py  globals.py  import_errors.py  releng.bats  requirements.txt  test_api.py  test_cli.py  test_common.py  test_compat.py  test_engine.py  test_globals.py  test_import_errors.py  test_utils.py  utils.py
tests/engines/: base.py  cheetah.py  jinja2.py  mako.py  pystache.py  strtemplate.py  tenjin.py  test_base.py  test_cheetah.py  test_jinja2.py  test_mako.py  test_pystache.py  test_strtemplate.py
