# ref. https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[bdist_wheel]
universal = 1

[metadata]
#name = anytempla
#version = attr: src.VERSION
description = A module to abstract template engines and provide common APIs
long_description = file: README.rst
author = Satoru SATOH
author_email = satoru.satoh@gmail.com
maintainer = Satoru SATOH
maintainerr_email = satoru.satoh@gmail.com
url = https://github.com/ssato/python-anytemplate
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
    Topic :: Utilities

[options]
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    anytemplate_cli = anytemplate.cli:main

[tool:pytest]
python_files = *.py
addopts = --doctest-modules --ignore=setup.py
