# ref. https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[bdist_wheel]
universal = 1

[metadata]
name = anytemplate
# .. todo::
# version = attr: src.VERSION
description = A module to abstract template engines and provide common APIs
long_description = file: README.rst
author = Satoru SATOH
author_email = satoru.satoh@gmail.com
maintainer = Satoru SATOH
maintainer_email = satoru.satoh@gmail.com
url = https://github.com/ssato/python-anytemplate
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
    Topic :: Utilities

test_suite = nose.collector
tests_require =
    nose

[options]
include_package_data = True
# .. note:: It does not look worked as expected w/ older setuptools.
#package_dir =
#    = src
packages = find:

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    anytemplate_cli = anytemplate.cli:main

[tool:pytest]
python_files = *.py
addopts = --doctest-modules --ignore=setup.py

# [aliases]
# test = nosetests -v --with-doctest --all-modules --with-coverage --cover-branches -w tests/
