# ref. https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[bdist_wheel]
universal = 1

[metadata]
name = anytemplate
# .. todo::
# version = attr: src.VERSION
project_urls =
    CI: Travis = https://travis-ci.org/ssato/python-anytemplate
    Download = https://pypi.python.org/pypi/anytemplate
    Download RPMs = https://copr.fedoraproject.org/coprs/ssato/python-anyconfig/
    Bug Tracker = https://github.com/ssato/python-anytemplate/issues
    Source = https://github.com/ssato/python-anytemplate

description = A module to abstract template engines and provide common APIs
long_description = file: README.rst
author = Satoru SATOH
author_email = satoru.satoh@gmail.com
maintainer = Satoru SATOH
maintainer_email = satoru.satoh@gmail.com
url = https://github.com/ssato/python-anytemplate
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
    Topic :: Utilities

[options]
include_package_data = True
packages = find:

# minimum dependencies.
install_requires =
    anyconfig
    jinja2

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    anytemplate_cli = anytemplate.cli:main

[tool:pytest]
testpaths =
    tests

# todo:
# addopts = --doctest-modules -n auto --cov=rules -vv

# vim:sw=4:ts=4:et:
